<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_gray"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/app_toolbar"
        style="@style/ToolbarWhite"
        app:title="@string/legal_documents" />

    <LinearLayout
        android:id="@+id/info_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@color/white"
        android:elevation="2dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/user_agreement"
            style="@style/DefaultProfileTextView"
            android:layout_height="wrap_content"
            android:paddingTop="18dp"
            android:paddingBottom="18dp"
            android:text="@string/user_agreement" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="16dp"
            android:background="@color/gray_divider" />

        <TextView
            android:id="@+id/privacy_policy"
            style="@style/DefaultProfileTextView"
            android:layout_height="wrap_content"
            android:paddingTop="18dp"
            android:paddingBottom="18dp"
            android:text="@string/privacy_policy" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="16dp"
            android:background="@color/gray_divider" />

        <TextView
            android:id="@+id/policy_of_personal_data"
            style="@style/DefaultProfileTextView"
            android:layout_height="wrap_content"
            android:paddingTop="18dp"
            android:paddingBottom="18dp"
            android:text="@string/policy_of_personal_data" />

    </LinearLayout>

</LinearLayout>