<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="14dp"
    android:background="#EEEFF4"
    android:orientation="vertical"
    android:paddingStart="16dp"
    android:paddingEnd="16dp">

    <TextView
        android:id="@+id/search_info_title"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="#EEEFF4"
        android:drawableEnd="@drawable/ic_bottom_arrow"
        android:fontFamily="@font/roboto_medium"
        android:fontFeatureSettings="smcp"
        android:gravity="center_vertical"
        android:text="@string/search_info_title"
        android:textColor="@color/blue_primary"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/search_info_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_regular"
        android:lineSpacingExtra="3sp"
        android:paddingStart="0dp"
        android:paddingTop="4dp"
        android:paddingEnd="40dp"
        android:paddingBottom="0dp"
        android:text="@string/search_info_description"
        android:textColor="@color/blue_primary"
        android:textSize="15sp"
        android:visibility="gone"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/not_show_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="20dp"
        android:alpha="0.2"
        android:fontFamily="@font/roboto_regular"
        android:fontFeatureSettings="smcp"
        android:text="@string/not_show_info"
        android:textColor="@color/blue_primary"
        android:visibility="gone"
        tools:visibility="visible" />

</LinearLayout>