<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/passengers_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.tickets.passengers.PassengersFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/passengers_toolbar"
        style="@style/ToolbarWhite"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            style="@style/ToolbarBlueCenteredText"
            android:text="@string/toolbar_passengers" />

    </androidx.appcompat.widget.Toolbar>

    <TextView
        android:id="@+id/passengers_adult_title"
        style="@style/TextBlueBold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/adult"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passengers_toolbar" />

    <include
        android:id="@+id/passengers_choose_adult_count"
        layout="@layout/layout_choose_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/passengers_adult_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/passengers_adult_title" />

    <ImageView
        android:id="@+id/adult_divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/divider_search"
        android:layout_marginTop="20dp"
        android:layout_marginStart="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/passengers_adult_title" />

    <TextView
        android:id="@+id/passengers_children_title"
        style="@style/TextBlueBold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:text="@string/children"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/adult_divider" />

    <include
        android:id="@+id/passengers_choose_children_count"
        layout="@layout/layout_choose_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/passengers_children_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/passengers_children_title" />

    <com.google.android.flexbox.FlexboxLayout
        android:id="@+id/passengers_children_info_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:paddingBottom="16dp"
        app:flexWrap="wrap"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/passengers_children_title"
        app:layout_constraintTop_toBottomOf="@id/passengers_children_title">

    </com.google.android.flexbox.FlexboxLayout>

    <Button
        android:id="@+id/passengers_done_button"
        android:layout_width="match_parent"
        style="@style/ApplyButton.Blue"
        android:text="@string/done"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
