<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/child_info_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/TextBlueBold"
        android:visibility="gone"
        android:text="@string/child_age"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/child_info_alert"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#26EB5757"
        android:fontFamily="@font/roboto_medium"
        android:fontFeatureSettings="smcp"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:paddingStart="28dp"
        android:paddingTop="10dp"
        android:paddingEnd="28dp"
        android:paddingBottom="10dp"
        android:text="@string/child_info_alert"
        android:textColor="#80E71E1E"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/child_info_with_seat_title" />

    <TextView
        android:id="@+id/child_info_age_title"
        style="@style/TextBlueBold.Smaller"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/child_age"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <include
        android:id="@+id/child_info_choose_adult_count"
        layout="@layout/layout_choose_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/child_info_age_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/child_info_age_title" />

    <ImageView
        android:id="@+id/adult_divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/divider_search"
        android:layout_marginTop="20dp"
        android:layout_marginStart="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/child_info_age_title" />

    <TextView
        android:id="@+id/child_info_with_seat_title"
        style="@style/TextBlueBold.Smaller"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:text="@string/seat_required"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/adult_divider" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/child_info_with_seat_switch"
        android:theme="@style/SwithBlue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/child_info_with_seat_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/child_info_with_seat_title" />

    <Button
        android:id="@+id/child_info_done_button"
        style="@style/ApplyButton.Blue"
        android:text="@string/done"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/child_info_alert"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <View
        android:layout_width="wrap_content"
        android:layout_height="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/child_info_done_button" />

</androidx.constraintlayout.widget.ConstraintLayout>